--- a/.env.example
+++ b/.env.example
@@ -4,11 +4,14 @@ MARIADB_DATABASE=moodle
 MARIADB_USER=moodle
 MARIADB_PASSWORD=
 
+MOODLE_USERNAME=admin
+MOODLE_PASSWORD=
+
 # Ваша почта для уведомлений от Let's Encrypt
 ACME_EMAIL=email@example.com
 
 # Основной домен для ваших проектов
-DOMAIN=example.com
+DOMAIN=localhost
 
 # --- Переменные для Moodle ---
 # URL сайта для Moodle (для генерации путей)
@@ -16,4 +19,5 @@ MOODLE_SITE_URL=https://moodle.example.com
 
 # Пользователь и пароль для дашборда (уже в формате htpasswd)
 # Выполните: htpasswd -nb admin MySuperStrongPassword
-TRAEFIK_DASHBOARD_CREDENTIALS=
+# И вставьте сюда результат (экранируйте $ как $$)
+TRAEFIK_DASHBOARD_CREDENTIALS=admin:$$ap
