--- a/.env.example
+++ b/.env.example
@@ -7,17 +7,6 @@ MARIADB_PASSWORD=
 MOODLE_USERNAME=admin
 MOODLE_PASSWORD=
 
-# Ваша почта для уведомлений от Let's Encrypt
-ACME_EMAIL=email@example.com
-
-# Основной домен для ваших проектов
-DOMAIN=localhost
-
 # --- Переменные для Moodle ---
 # URL сайта для Moodle (для генерации путей)
-MOODLE_SITE_URL=https://moodle.example.com
-
-# Пользователь и пароль для дашборда (уже в формате htpasswd)
-# Выполните: htpasswd -nb admin MySuperStrongPassword
-# И вставьте сюда результат (экранируйте $ как $$)
-TRAEFIK_DASHBOARD_CREDENTIALS=admin:$$ap
+MOOODLE_SITE_DOMAIN=moodle.localhost.com
